# ccutils

./: .gitignore  .ruff.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflow/: jekyll-gh-pages.yml
.github/workflows/: jekyll-gh-pages.yml  test.yml
docs/jekyll/: README.md  _config.yml  index.md
src/: .gitignore
src/ccutils/: __init__.py  __main__.py  ccutils.py  cli.py  docs.py  extract.py  run.py
tests/: test-ccutils.py  test_add_docs.py  test_extract.py  test_run_template.py
